--- a/content/post/2019-04-02-lp02-python语法基础.Rmd
+++ b/content/post/2019-04-02-lp02-python语法基础.Rmd
@@ -10,111 +10,8 @@ tags:
 output: html_document
 ---
 
-以下内容主要参考[《利用Python进行数据分析·第2版》](https://www.jianshu.com/p/04d180d90a3f)
+以下内容主要参考[《利用Python进行数据分析·第2版》](https://www.jianshu.com/p/04d180d90a3f)和[Python官方文档 3.7.3](https://docs.python.org/3/tutorial/index.html)
 
-### 类型
-
-先有类型 (Type)，而后才能生成实例 (Instance)。Python 中的一切都是对象，包括类型在内的每个对象都包含一个标准头，通过头部信息就可以明确知道其具体类型。
-
-Python被认为是强类型化语言，意味着每个对象都有明确的类型。知道对象的类型很重要，最好能让函数可以处理多种类型的输入。你可以用`isinstance`函数检查对象是某个类型的实例。 
-
-### 名字空间
-
-名字空间是 Python 最核心的内容。Python的名字实际上是一个字符串对象，它和所指向的目标对象一起在名字空间中构成一项 {name: object} 关联。
-
-名字的作用仅仅是在某个时刻与名字空间中的某个对象进行关联。其本身不包含目标对象的任何信息，只有通过对象头部的类型指针才能获知其具体类型，进而查找其相关成员数据。正因为名字的弱类型特征，我们可以在运行期间随时将其关联到任何类型对象。
-
-### `is` 和 `==` 的区别
-
-先来看几个例子： 
-
-```python
-a = "hello"
-b = "hello"
-print(a is b)  # 输出 True 
-print(a == b)  # 输出 True
-
-a = "hello world"
-b = "hello world"
-print(a is b)  # 输出 False
-print(a == b)  # 输出 True 
-
-a = [1, 2, 3]
-b = [1, 2, 3]
-print(a is b)  # 输出 False
-print(a == b)  # 输出 True 
-
-a = [1, 2, 3]
-b = a
-print(a is b)  # 输出 True 
-print(a == b)  # 输出 True 
-```
-
-is 是检查两个对象是否指向同一块内存空间，而 == 是检查他们的值是否相等。
-
-一般情况下，如果 a is b 返回True的话，即 a 和 b 指向同一块内存地址的话，a == b 也返回True，即 a 和 b 的值也相等。只要 a 和 b 的值相等，a == b 就会返回True，而只有 id(a) 和 id(b) 相等时，a is b 才返回 True。 
-
-### 导入
-
-在Python中，模块就是一个有`.py`扩展名、包含Python代码的文件。假设有以下模块：
-
-```python
-# some_module.py
-PI = 3.14159
-
-def f(x):
-    return x + 2
-
-def g(a, b):
-    return a + b
-```
-
-如果想从同目录下的另一个文件访问`some_module.py`中定义的变量和函数，可以：
-
-```python
-import some_module
-result = some_module.f(5)
-pi = some_module.PI
-```
-
-或者：
-
-```python
-from some_module import f, g, PI
-result = g(5, PI)
-```
-
-使用`as`关键词，你可以给引入起不同的变量名：
-
-```python
-import some_module as sm
-from some_module import PI as pi, g as gf
-
-r1 = sm.f(pi)
-r2 = gf(6, pi)
-```
-
-###  可变与不可变对象
-
-Python中的大多数对象，比如列表、字典、NumPy数组、用户定义的类型（类），都是可变的。这意味着这些对象或包含的值可以被修改：
-
-```python
-a_list = ['foo', 2, [4, 5]]
-
-a_list[2] = (3, 4)
-```
-
-其它的，例如字符串和元组，是不可变的：
-
-```python
-In [1]: a_tuple = (3, 5, (4, 5))
-
-In [2]: a_tuple[1] = 'four'
----------------------------------------------------------------------------
-TypeError: 'tuple' object does not support item assignment
-```
-
-记住，可以修改一个对象并不意味就要修改它。这被称为*副作用*。例如，当写一个函数，任何副作用都要在文档或注释中写明。如果可能的话，我推荐避免副作用，采用不可变的方式，即使要用到可变对象。
 
 ### 控制流
 
@@ -217,14 +114,13 @@ for i in range(5):
 
 ####  三元表达式
 
- Python中的三元表达式可以将if-else语句放到一行里。 
+Python中的三元表达式可以将if-else语句放到一行里。 
 
 ```python
 value = true-expr if condition else false-expr
 ```
 
 ### 文件和操作系统
-
 #### 文件的读写和关闭
 
 ```python
@@ -243,8 +139,6 @@ f.writelines()#表示把一个列表写入
 
 ![](http://ww1.sinaimg.cn/large/748b26cfly1g1nicb5l0nj20jg069dhg.jpg)
 
-
-
 #### os模块
 [os模块](https://python101.pythonlibrary.org/chapter16_os.html)提供了一种方便的使用操作系统函数的方法。
 
@@ -258,11 +152,11 @@ if os.path.exists('a123.txt'):
   os.remove('a123.txt')
 #文件路径的处理
 #假设有一个文件路径：path='/users/Python/Data/info.txt'
-print os.path.dirname(path)
+print(os.path.dirname(path))
 #分割文件名
-print os.path.basename(path)
+print(os.path.basename(path))
 #分割文件的后缀
-print os.path.split(path) #('/users/Python/Data', 'info.txt')
+print(os.path.split(path)) #('/users/Python/Data', 'info.txt')
 #创建目录
 os.mkdir('test01')#在当前目录下创建一个test01目录
 os.mkdir('test02')#在当前目录下创建一个test02目录
@@ -285,3 +179,565 @@ print os.path.isdir('test01')
 #判断文件或者目录是否存在
 print os.path.exists('demo_file.py')
 ```
+
+### 类型初探
+
+先有类型 (Classes)，而后才能生成实例 (Instance)。Python 中的一切都是对象，包括类型在内的每个对象都包含一个标准头，通过头部信息就可以明确知道其具体类型。
+
+Python被认为是强类型化语言，意味着每个对象都有明确的类型。知道对象的类型很重要，最好能让函数可以处理多种类型的输入。你可以用`isinstance`函数检查对象是某个类型的实例。 
+
+
+#### `is` 和 `==` 的区别
+
+先来看几个例子： 
+
+```python
+a = "hello"
+b = "hello"
+print(a is b)  # 输出 True 
+print(a == b)  # 输出 True
+
+a = "hello world"
+b = "hello world"
+print(a is b)  # 输出 False
+print(a == b)  # 输出 True 
+
+a = [1, 2, 3]
+b = [1, 2, 3]
+print(a is b)  # 输出 False
+print(a == b)  # 输出 True 
+
+a = [1, 2, 3]
+b = a
+print(a is b)  # 输出 True 
+print(a == b)  # 输出 True 
+```
+
+`is `是检查两个对象是否指向同一块内存空间，而 `==` 是检查他们的值是否相等。
+
+一般情况下，如果 a is b 返回True的话，即 a 和 b 指向同一块内存地址的话，a == b 也返回True，即 a 和 b 的值也相等。只要 a 和 b 的值相等，a == b 就会返回True，而只有 id(a) 和 id(b) 相等时，a is b 才返回 True。 
+
+####  可变与不可变对象
+
+Python中的大多数对象，比如列表、字典、NumPy数组、用户定义的类型（类），都是可变的。这意味着这些对象或包含的值可以被修改：
+
+```python
+a_list = ['foo', 2, [4, 5]]
+
+a_list[2] = (3, 4)
+```
+
+其它的，比如字符串和元组，是不可变的：
+
+```python
+a_tuple = (3, 5, (4, 5))
+a_tuple[1] = 'four' #TypeError
+```
+
+记住，可以修改一个对象并不意味就要修改它。这被称为*副作用*。例如，当写一个函数，任何副作用都要在文档或注释中写明。如果可能的话，推荐采用不可变的方式避免副作用，即使要用到可变对象。
+
+### 模块
+模块是一个包含Python定义和声明的文件。文件名就是模块名后跟文件后缀 .py 。在一个模块内部，模块名（作为一个字符串）可以通过全局变量 `__name__` 的值获得。例如，使用在当前目录下创建一个名为 fibo.py 的文件， 文件中含有以下内容：
+
+```python
+# fibo.py
+def fib(n):
+    a, b = 0, 1
+    while a < n:
+        print(a, end=' ')
+        a, b = b, a+b
+    print()
+
+def fib2(n):
+    result = []
+    a, b = 0, 1
+    while a < n:
+        result.append(a)
+        a, b = b, a+b
+    return result
+```
+导入该模块：
+```python
+import fibo
+```
+模块名fibo被导入到当前符号表中，但是fibo中定义的函数名称不会直接导入当前工作表内。可以用模块名访问这些函数：
+```python
+fibo.fib(50)
+fibo.__name__  #'fibo'
+```
+如果你想经常使用某个函数，你可以把它赋值给一个本地名称:
+```python
+myfib = fibo.fib
+```
+
+模块可以包含可执行语句以及已定义的函数。这些语句通常用于初始化模块。只有在导入语句中第一次遇到模块名称时，才会执行。如果文件以脚本的方式执行，它们也会运行。
+
+每个模块都有自己的私有符号表，它是被定义在模块中所有函数当作全局符号表一样使用。模块的作者可以在模块里使用全局变量，而不用担心与某个用户的全局变量有冲突。
+
+模块中可以导入其它模块。一般来说，习惯性地将所有 `import` 语句放在模块（或脚本）的开头，但这不是必须的。被导入的模块的名字存放在导入模块的全局符号表中。
+
+另外有一种`import`语句的变种，可以从一个模块直接将名称导入到当前符号表中。例如：
+```python
+from fibo import fib, fib2
+```
+一般情况下不建议使用`from fibo import *`这种导入方式，因为它会引入一系列未知的名称到解释器中，这很可能覆盖你已经定义的一些东西。
+
+使用`as`关键词，你可以给导入名称重命名：
+
+```python
+from fibo import fib as fun1, fib2 as fun2
+```
+
+
+
+#### 以脚本的方式执行模块
+
+一个 Python 源码文件除了可以被直接运行外，还可以作为模块（也就是库）被导入。不管是导入还是直接运行，最顶层的代码都会被运行（Python 用缩进来区分代码层次）。
+
+在命令行窗口中，可以使用`python fibo.py <arguments>`执行模块里的代码。在IPython中，可以使用`%run fibo.py <arguments>`执行模块里的代码，这同时会将模块中定义的函数导入当前符号表中。
+
+[`__main__`](https://docs.python.org/zh-cn/3.7/library/__main__.html) 是顶层代码执行的作用域的名称。模块的 `__name__` 在通过标准输入、脚本文件或是交互式命令读入的时候会等于 `__main__`。
+
+模块可以通过检查自己的 `__name__` 来得知是否运行在 main 作用域中，这使得模块可以在作为脚本或是通过 python -m 运行时条件性地执行一些代码，而在被 import 时不会执行。
+
+实现方式是在模块中添加`if __name__ == '__main__'` 代码块：
+```python
+if __name__ == "__main__":
+    import sys
+    fib(int(sys.argv[1]))
+```
+简单的理解就是： 如果模块是被直接运行的，则代码块被运行，如果模块是被导入的，则代码块不被运行。^[参考资料：[Python 中的 if `__name__` == `__main__` 该如何理解](http://blog.konghy.cn/2017/04/24/python-entry-program/)]
+
+对软件包来说，通过加入 `__main__.py` 模块可以达到同样的效果，当使用 `-m` 运行模块时，其中的代码会被执行。
+
+#### 编译好的模块
+为了加快加载模块的速度，Python在`__pycache__`目录下缓存每个模块编译好的版本，名字`为module.version.pyc`，其中version表示编译好的文件的格式；它一般包含Python的版本号。例如，在Python 3.3中，spam.py编译好的版本将缓存为 `__pycache__/spam.cpython-33.pyc`。这种命名约定允许由不同发布和不同版本的Python编译的模块同时存在。
+
+Python会检查源文件和编译好的版本的修改日期，来查看它是否过期以及需要重新编译。这是完全自动化的过程。同时，编译后的模块是跨平台的，所以同一个库可以在不同架构的系统之间共享。
+
+Python 在两种情况下不检查缓存。第一，它会始终重新编译而且不保存直接从命令行加载的模块。第二，如果没有源模块，它不会检查缓存。若要支持没有源文件（只有编译版）的发布，编译后的模块必须在源目录下，并且必须没有源模块。
+
+####  标准模块
+
+Python附带了一个标准模块库，在单独的Python库参考手册文档。有一些模块内置于解释器中；它们提供对不属于语言核心但仍然内置的操作的访问，以提高效率或提供对系统调用等操作系统原语的访问。这些模块的集合是一个配置选项，它也取决于底层平台。例如，winreg 模块只在Windows操作系统上提供。一个特别值得注意的模块 sys，它被内嵌到每一个Python解释器中。变量 sys.ps1 和 sys.ps2 定义了主提示符和辅助提示符使用的字符串:
+
+```python
+import sys
+sys.ps1
+sys.ps2
+# 注意：只有在交互式模式中，这两个变量才有定义
+```
+
+#### dir()函数
+
+内置函数 dir() 用来找出模块中定义了哪些名字。它返回一个排好序的字符串列表：
+
+```python
+dir(fibo)
+# ['__name__', 'fib', 'fib2']
+```
+如果不带参数， dir() 列出当前环境中已定义的名称。dir()不会列出内置的函数和变量的名称。
+
+#### 包
+
+包是一种通过用“带点号的模块名”来构造 Python 模块命名空间的方法。 例如，模块名 A.B 表示 A 包中名为 B 的子模块。正如模块的使用使得不同模块的作者不必担心彼此的全局变量名称重名一样，使用加点的模块名可以使得 NumPy 或 Pillow 等多模块软件包的作者不必担心彼此的模块名称重名。
+
+当使用 `from package import item` 时，item可以是包的子模块（或子包），也可以是包中定义的其他名称，如函数，类或变量。 import 语句首先测试是否在包中定义了item；如果没有，它假定它是一个模块并尝试加载它。如果找不到它，则引发 ImportError 异常。
+
+相反，当使用 `import item.subitem.subsubitem` 这样的语法时，除了最后一项之外的每一项都必须是一个包；最后一项可以是模块或包，但不能是前一项中定义的类或函数或变量。
+
+#### 从包中导入 *
+
+首先，`from pkg import *`是不建议的导入方法。如果要使用这种方法，一般应该在`__init__.py`中提供包的显式索引。
+如果一个包的 `__init__.py` 代码定义了一个名为 `__all__` 的列表，它会被视为在遇到 from package import * 时应该导入的模块名列表。如果包作者认为从他的包中导入 * 的操作没有必要被使用，也可以决定不支持此列表。
+
+
+
+
+### [命名空间和作用域](http://blog.cipherc.com/2015/04/25/python_namespace_and_scope)
+
+命名空间（namespace）是 Python 最核心的内容。Python的名字实际上是一个字符串对象，它和所指向的目标对象一起在命名空间中构成一项 {name: object} 关联。所以命名空间是从名字到对象的一个映射(a mapping from name to objects) 。
+大部分命名空间都是按Python中的字典来实现的。名字的作用仅仅是在某个时刻与名字空间中的某个对象进行关联。其本身不包含目标对象的任何信息，只有通过对象头部的类型指针才能获知其具体类型，进而查找其相关成员数据。正因为名字的弱类型特征，我们可以在运行期间随时将其关联到任何类型对象。
+
+在程序执行期间，可能（其实是肯定）会有多个命名空间同时存在。不同命名空间的创建/销毁时间也不同。此外，两个不同命名空间中的两个相同名字的变量之间没有任何联系。
+
+一个作用域(Scope)是一个命名空间可直接访问的 Python 程序的文本区域。这里的 “可直接访问” 意味着对名称的非限定引用会尝试在命名空间中查找名称。
+
+- Local(innermost):包含局部变量。比如一个函数/方法内部。
+- Enclosing: 包含了非局部(non-local)也非全局(non-global)的变量。比如两个嵌套函数，内层函数可能搜索外层函数的namespace，但该namespace对内层函数而言既非局部也非全局。
+- Global(next-to-last): 当前脚本的最外层。比如当前模块的全局变量。
+- Built-in(outtermost): Python `__builtin__` 模块。包含了内建的变量/关键字等。
+
+作用域的搜索顺序是：Local -> Enclosing -> Global -> Built-in
+
+```{python engine.path="D:/Project/Anaconda3/python.exe"}
+def scope_test():
+    def do_local():
+        spam = "local spam"
+
+    def do_nonlocal():
+        nonlocal spam
+        spam = "nonlocal spam"
+
+    def do_global():
+        global spam
+        spam = "global spam"
+
+    spam = "test spam"
+    do_local()
+    print("After local assignment:", spam)
+    do_nonlocal()
+    print("After nonlocal assignment:", spam)
+    do_global()
+    print("After global assignment:", spam)
+
+scope_test()
+print("In global scope:", spam)
+```
+
+可以看到，局部赋值不会改变 scope_test 对 spam 的绑定（enclosing）。 nonlocal 赋值会改变 scope_test 对 spam 的绑定，而 global 赋值会改变模块层级的绑定。
+
+```python
+def outer():
+    a = 0
+    b = 1
+    def inner():
+        print(a)
+        print(b)
+        # b += 1        # A
+        b = 4           # B
+    inner()
+
+outer()
+# UnboundLocalError: local variable 'b' referenced before assignment
+```
+Python解释器执行到 inner() 中的 print b 时，发现有个变量 b 在当前作用域(local)中
+无法找到该变量。它继续尝试把整块代码解释完。 b 是属于 inner() 作用域的。既然对变量 b 的赋值（声明）发生在 print 语句之后， print 语句执行时变量 b 是还未被声明的，于是抛出错误：变量在赋值前就被引用。在这个例子中，只有A语句没有B语句也会导致同样的结果。
+
+因为b没有被声明为非本地变量(nonlocal)，在inner()的局部空间中b是只读的（尝试写入b的赋值语句只会在最内层作用域中创建一个新的局部变量，而同名的外部变量保持不变）。
+
+```{python}
+for i in range(3): print(i)
+print("i =", i)
+```
+for 后面跟着的变量(target list)在循环结束后是不会被删除的，但如果 for 循环的序列为空，这些变量是完全不会被赋值的。
+
+### Python 面向对象
+
+#### 术语
+
+- **类(Class):** 用来描述具有相同的属性和方法的对象的集合。它定义了该集合中每个对象所共有的属性和方法。对象是类的实例。
+- **类变量：**类变量在整个实例化的对象中是公用的。类变量定义在类中且在函数体之外。类变量通常不作为实例变量使用。
+- **数据成员：**类变量或者实例变量, 用于处理类及其实例对象的相关的数据。
+- **方法重写：**如果从父类继承的方法不能满足子类的需求，可以对其进行改写，这个过程叫方法的覆盖（override），也称为方法的重写。
+- **局部变量：**定义在方法中的变量，只作用于当前实例的类。
+- **实例变量：**在类的声明中，属性是用变量来表示的。这种变量就称为实例变量，是在类声明的内部但是在类的其他成员方法之外声明的。
+- **继承：**即一个派生类（derived class）继承基类（base class）的字段和方法。继承也允许把一个派生类的对象作为一个基类对象对待。例如，有这样一个设计：一个Dog类型的对象派生自Animal类，这是模拟"是一个（is-a）"关系（例图，Dog是一个Animal）。
+- **实例化：**创建一个类的实例，类的具体对象。
+- **方法：**类中定义的函数。
+- **对象：**通过类定义的数据结构实例。对象包括两个数据成员（类变量和实例变量）和方法。
+
+#### 创建类
+
+类(classes)定义的形式如下：
+```python
+class ClassName:
+    '类的帮助信息' 
+    <statement-1>
+    ...
+    <statement-N>
+```
+类定义与函数定义 (def 语句) 一样必须被执行才会起作用。当进入类定义时，将创建一个新的命名空间，并将其用作局部作用域。因此，所有对局部变量的赋值都是在这个新命名空间之内。
+
+#### 类对象
+
+类对象支持两种操作：属性引用和实例化。
+
+属性引用 使用 Python 中所有属性引用所使用的标准语法: obj.name。 有效的属性名称是类对象被创建时存在于类命名空间中的所有名称。 因此，如果类定义是这样的:
+
+```{python}
+class MyClass:
+    """A simple example class"""
+    i = 12345
+
+    def f(self):
+        return 'hello world'
+```
+那么 `MyClass.i` 和 `MyClass.f` 就是有效的属性引用，将分别返回一个整数和一个函数对象。 类属性也可以被赋值，因此可以通过赋值来更改 MyClass.i 的值。 `__doc__` 也是一个有效的属性，将返回所属类的文档字符串: "A simple example class"。
+
+类的实例化使用函数表示法。 可以假装类对象就是会返回一个新的类实例的不带参数的函数。 举例来说（假设使用上述的类）: `x = MyClass()`。创建类的新实例并将此对象分配给局部变量`x`。
+
+当一个类定义了 `__init__()` 方法时，类的实例化操作会自动为新创建的类实例发起调用 `__init__()`，可以看成是初始化操作。 当创建了这个类的实例时就会调用该方法。
+
+当然，`__init__()` 方法还可以有额外参数以实现更高灵活性。在这种情况下，提供给类实例化运算符的参数将被传递给 `__init__()`。 例如：
+
+```{python}
+class Complex:
+     def __init__(self, realpart, imagpart):
+         self.r = realpart
+         self.i = imagpart
+
+x = Complex(3.0, -4.5)
+x.r, x.i
+```
+
+#### 实例对象(Instance Objects)
+
+实例对象理解的唯一操作是属性引用。有两种有效的属性名称，数据属性和方法。数据属性不需要声明；像局部变量一样，它们将在第一次被赋值时产生。另一类实例属性引用称为方法。 方法是*从属于*对象的函数。（在 Python中，方法这个术语并不是类实例所特有的，其他对象也可以有方法。）
+
+#### 方法对象
+
+`x.f` 是一个方法对象，它可以被保存起来以后再调用。
+```{python}
+x = MyClass()
+x.f()
+xf = x.f
+xf()
+```
+
+```python
+MyClass.f()
+# TypeError: f() missing 1 required positional argument: 'self'
+```
+
+可以看到， `x.f()`没有报错，但 `MyClass.f()` 报错了。所以 `x.f` 与 `MyClass.f` 并不是一回事，它们是一个方法对象，一个是函数对象。
+
+方法的特殊之处就在于实例对象会作为函数的第一个参数被传入。 在我们的示例中，调用 x.f() 其实就相当于 MyClass.f(x)。总之，调用一个具有n个参数的方法就相当于调用n+1个参数的对应函数，增加的这个参数值为方法所属实例对象，位置在其他参数之前。
+
+#### 类和实例变量
+
+一般来说，实例变量是唯一属于每个实例的数据，而类变量则是类的所有实例共享的属性和方法:
+```{python}
+class Dog:
+    kind = 'canine'         # class variable shared by all instances
+    def __init__(self, name):
+        self.name = name    # instance variable unique to each instance
+
+d = Dog('Fido')
+e = Dog('Buddy')
+d.kind, e.kind          # shared by all dogs
+d.name                  # unique to d
+e.name                  # unique to e
+```
+
+#### Python内置类属性
+
+- `__dict__` : 类的属性（包含一个字典，由类的数据属性组成）
+- `__doc__` :类的文档字符串
+- `__name__`: 类名
+- `__module__`: 类定义所在的模块（类的全名是`__main__.className`，如果类位于一个导入模块`mymod`中，那么`className.__module__` 等于 `mymod`）
+- `__bases__` : 类的所有父类构成元素（包含了一个由所有父类组成的元组）
+
+```{python}
+class Employee:
+   'base class'
+   empCount = 0
+ 
+   def __init__(self, name, salary):
+      self.name = name
+      self.salary = salary
+      Employee.empCount += 1
+   
+   def displayCount(self):
+     print("Total Employee %d" % Employee.empCount)
+ 
+   def displayEmployee(self):
+      print("Name : ", self.name,  ", Salary: ", self.salary)
+ 
+print("Employee.__doc__:", Employee.__doc__)
+print("Employee.__name__:", Employee.__name__)
+print("Employee.__module__:", Employee.__module__)
+print("Employee.__bases__:", Employee.__bases__)
+print("Employee.__dict__:", Employee.__dict__)
+```
+
+#### 补充说明
+
+数据属性会覆盖同名的方法属性，这在大型程序中可能带来极难发现的 bug。为了避免意外的命名冲突，使用一些约定来减少冲突的机会是明智的。可能的约定包括：方法属性名称的首字母大写，使用一个唯一的小写的字符串（也许只是一个下划线）作为数据属性名称的前缀，或者方法使用动词而数据属性使用名词。
+
+类的方法与普通的函数只有一个特别的区别——它们必须有一个额外的**第一个参数名称**，按照惯例它的名称是 `self`。这仅仅是一个约定：名字 `self` 对 Python 而言绝对没有任何特殊含义。但是请注意：如果不遵循这个约定，对其他的 Python 程序员而言你的代码可读性就会变差，而且有些类 *查看* 器程序也可能是遵循此约定编写的。
+
+```{python}
+class Test:
+    def prt(self):
+        print(self)
+        print(self.__class__)
+ 
+t = Test()
+t.prt()
+```
+
+从执行结果可以很明显的看出，self 代表的是类的实例，代表当前对象的地址，而 **`self.__class__`** 则指向类。
+
+类属性的任何函数对象都为那个类的实例定义了一个方法。函数定义代码不一定非得定义在类中：也可以将一个函数对象赋值给类中的一个局部变量。例如：
+
+```python
+# Function defined outside the class
+def f1(self, x, y):
+    return min(x, x+y)
+    
+class C:
+    f = f1
+    def g(self):
+        return 'hello world'
+    h = g
+```
+
+现在 `f`、`g` 和 `h` 都是类 `C`中引用函数对象的属性，因此它们都是 `C` 的实例的方法 —— `h` 完全等同于 `g` 。请注意，这种做法通常只会使阅读程序的人产生困惑。
+
+方法可以通过使用 `self` 参数的方法属性，调用其他方法：
+
+```python
+class Bag:
+    def __init__(self):
+        self.data = []
+
+    def add(self, x):
+        self.data.append(x)
+
+    def addtwice(self, x):
+        self.add(x)
+        self.add(x)
+```
+
+方法可以像普通函数那样引用全局命名。与方法关联的全局作用域是包含这个方法的定义的模块（类）。（类本身永远不会作为全局作用域使用。）
+
+每个值都是一个对象，因此每个值都有一个*类*（也称它的*类型*），可以通过 `object.__class__` 查看。
+
+#### 类的继承
+
+面向对象的编程带来的主要好处之一是代码的重用，实现这种重用的方法之一是通过继承机制。
+
+通过继承创建的新类称为**子类**或**派生类**，被继承的类称为**基类**或**父类**。
+
+```python
+class DerivedClassName(BaseClassName):
+    <statement-1>
+    ...
+    <statement-N>
+```
+
+在python中继承中的一些特点：
+
+1. 如果在子类中需要父类的构造方法就需要显示的调用父类的构造方法，或者不重写父类的构造方法。详细说明可查看：[python 子类继承父类构造函数说明](http://www.runoob.com/w3cnote/python-extends-init.html)
+2. 在调用基类的方法时，需要加上基类的类名前缀，且需要带上 self 参数变量。区别在于类中调用普通函数时并不需要带上 self 参数
+3. Python 总是首先查找对应类型的方法，如果它不能在派生类中找到对应的方法，它才开始到基类中逐个查找。（先在本类中查找调用的方法，找不到才去基类中找）
+
+如果在继承元组中列了一个以上的类，那么它就被称作"多重继承" 。
+
+```{python}
+class Parent:       
+   parentAttr = 100
+   def __init__(self):
+      print("Call the parent class constructor")
+ 
+   def parentMethod(self):
+      print('Call the parent class method')
+ 
+   def setAttr(self, attr):
+      Parent.parentAttr = attr
+ 
+   def getAttr(self):
+      print("Parent class attribute :", Parent.parentAttr)
+ 
+class Child(Parent): 
+   def __init__(self):
+      print("Call subclass constructor")
+ 
+   def childMethod(self):
+      print('Call subclass method')
+ 
+c = Child()          
+c.childMethod()      
+c.parentMethod()     
+c.setAttr(200)       
+c.getAttr() 
+```
+
+派生类定义的执行过程和基类是相同的。在解析属性的引用时，如果在类中找不到请求的属性，搜索会在基类中继续。如果基类本身是由别的类派生而来，这个规则会递归应用。
+
+派生类的实例化没有什么特殊之处： `DerivedClassName()` 创建类的一个新的实例。方法的引用按如下规则解析： 搜索对应的类的属性，必要时沿基类链逐级搜索，如果找到了函数对象这个方法引用就是合法的。
+
+Python 有两个用于检查继承的函数：
+
+- `issubclass()`  布尔函数，判断一个类是另一个类的子类或者子孙类，语法：`issubclass(sub, sup)`
+- `isinstance(obj, Class) `布尔函数，如果obj是Class类的实例对象或者是一个Class子类的实例对象则返回true。
+
+派生类可以重写基类中的方法。
+```{python}
+class Parent: 
+   def myMethod(self):
+      print('Call parent class method')
+ 
+class Child(Parent): 
+   def myMethod(self):
+      print('Call subclass method')
+ 
+c = Child()
+c.myMethod()
+```
+
+派生类中的覆盖方法可能是想要扩充而不是简单的替代基类中的重名方法。有一个简单的方法可以直接调用基类方法：只要调用 `BaseClassName.methodname(self, arguments)`。
+
+#### 私有变量
+
+Python中并不存在所谓只能在对象内部才能访问的“私有”实例变量。然而，有一项大多数 Python 代码都遵循的习惯：带有一个下划线前缀的名称（例如`_spam` ）应被视为非公开的 API 的一部分（无论是函数、 方法还是数据成员）。
+
+由于存在一种合理的类私有成员使用场景（例如为了避免名称与子类所定义名称的冲突），Python 对这种机制提供了简单的支持，即所谓“名称重整” （*name mangling*）。`__spam` 形式的任何标识符（前面至少两个下划线，后面至多一个下划线）将被替换为 `_classname__spam`，其中 `classname` 为去除了前缀下划线的当前类名称。这种替换不考虑标识符的句法位置，只要它出现在类的定义内就会进行。
+
+Name mangling 有利于子类重写父类的方法而不会破坏类内部的方法调用
+```python
+class Mapping:
+    def __init__(self, iterable):
+        self.items_list = []
+        self.__update(iterable)
+
+    def update(self, iterable):
+        for item in iterable:
+            self.items_list.append(item)
+
+    __update = update   # private copy of original update() method
+
+class MappingSubclass(Mapping):
+    def update(self, keys, values):
+        # provides new signature for update()
+        # but does not break __init__()
+        for item in zip(keys, values):
+            self.items_list.append(item)
+```
+
+#### 迭代器
+
+你可能注意到大多数容器对象都可以用 [`for`](https://yiyibooks.cn/__trs__/xx/python_352/reference/compound_stmts.html#for) 遍历：
+
+```python
+for element in [1, 2, 3]:
+    print(element)
+for element in (1, 2, 3):
+    print(element)
+for key in {'one':1, 'two':2}:
+    print(key)
+for char in "123":
+    print(char)
+for line in open("myfile.txt"):
+    print(line, end='')
+```
+这种访问风格清晰、 简洁又方便。迭代器的用法在 Python 中普遍而且统一。在后台，for语句调用容器对象的`iter()`方法。该函数返回一个定义了`__next__()`方法的迭代器对象，它一次访问容器中的一个元素。没有后续的元素时，`__next__()` 会引发`StopIteration `异常，告诉 `for`循环停止迭代。你可以使用内建的 `next() `来调用` __next__()`，例子如下：
+```{python}
+# -*- coding: utf-8 -*-
+s = 'abc'
+it = iter(s)
+it
+next(it),next(it),next(it)
+```
+
+
+参考资料：
+
+- [Python官方教程 第九章：类](https://yiyibooks.cn/xx/python_352/tutorial/classes.html)
+- [Python3 面向对象](http://www.runoob.com/python3/python3-class.html)
+- [Python面向对象](http://www.runoob.com/python/python-object.html)
+- [一篇文章搞懂Python中的面向对象编程](http://yangcongchufang.com/%E9%AB%98%E7%BA%A7python%E7%BC%96%E7%A8%8B%E5%9F%BA%E7%A1%80/python-object-class.html)
+- [Python3 迭代器与生成器](http://www.runoob.com/python3/python3-iterator-generator.html)
+- [一篇文章搞懂Python中的函数式编程](http://yangcongchufang.com/%E9%AB%98%E7%BA%A7python%E7%BC%96%E7%A8%8B%E5%9F%BA%E7%A1%80/python-functional.html)
+
