--- a/content/post/2020-03-06-使用管道操作符提升r代码可读性.Rmd
+++ b/content/post/2020-03-06-使用管道操作符提升r代码可读性.Rmd
@@ -10,8 +10,7 @@ tags:
   - Packages
 ---
 
-管道操作符的功能是把前一个函数的结果作为参数传递给下一个函数。管道操作符可以将多个操作串联到一起，避免使用嵌套函数或者中间变量，使代码逻辑保持顺畅和简约。
-
+管道操作符的功能是把前一个函数的结果作为参数传递给下一个函数。管道操作符可以将多个操作串联到一起，避免使用嵌套函数或者中间变量，使代码逻辑保持顺畅和简约。本文主要使用pipeR包。
 
 ```{r message=FALSE}
 library(pipeR)
@@ -20,7 +19,7 @@ library(data.table)
 ```
 
 
-# pipeR package
+# pipeR包
 pipeR 提供 `%>>%` 管道操作符，
 
 ## 传递到第一个参数
