--- a/content/post/2021-01-17-intro-rmarkdown.Rmd
+++ b/content/post/2021-01-17-intro-rmarkdown.Rmd
@@ -156,7 +156,7 @@ $$
 
 比如B站视频：
 
-<iframe src="//player.bilibili.com/player.html?aid=60046431&bvid=BV18t411E7GZ&cid=104568723&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=60046431&bvid=BV18t411E7GZ&cid=104568723&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="850" height="485"> </iframe>
 
 # 段内元素
 
